[gd_scene load_steps=5 format=3 uid="uid://dvc72ad3xv8sf"]

[ext_resource type="Script" path="res://game/character_body_3d.gd" id="1_f1p2t"]
[ext_resource type="Script" path="res://game/lazy_remote_transform.gd" id="2_v6ssg"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_716up"]
radius = 0.1
height = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_1gmmy"]
radius = 0.25

[node name="CharacterBody3D" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
collision_layer = 5
collision_mask = 5
script = ExtResource("1_f1p2t")

[node name="cam_pivot" type="Node3D" parent="."]

[node name="cam_tracker" type="Node3D" parent="cam_pivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.595412, 0.803421, 0, -0.803421, 0.595412, 0, 4.7976, 3.43184)
script = ExtResource("2_v6ssg")
position_speed = 5.0
rotation_speed = 10.0

[node name="placeholder" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_716up")

[node name="cable_grabber" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="cable_grabber"]
shape = SubResource("SphereShape3D_1gmmy")

[node name="body_pivot" type="Node3D" parent="."]

[node name="body_tracker" type="Node3D" parent="body_pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
script = ExtResource("2_v6ssg")
position_speed = 10.0
rotation_speed = 5.0
